--- a/WidgetExtension/Localizable.xcstrings
+++ b/WidgetExtension/Localizable.xcstrings
@@ -2251,7 +2251,7 @@
         "fr" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Imaginaire"
+            "value" : "Imago"
           }
         },
         "it" : {
@@ -2328,7 +2328,7 @@
         "fr" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Physique"
+            "value" : "Physico"
           }
         },
         "it" : {
@@ -2482,7 +2482,7 @@
         "fr" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Quantique"
+            "value" : "Quanto"
           }
         },
         "it" : {
