Widgets // Add DualProfileWidget.

--- a/WidgetExtension/Localizable.xcstrings
+++ b/WidgetExtension/Localizable.xcstrings
@@ -7113,6 +7113,160 @@
         }
       }
     },
+    "pzWidgetsKit.statusDualProfile.enquiry.title" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Überprüfen Sie den Status der Ausdauererholung von zwei Profilen im selben Widget"
+          }
+        },
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Check the stamina recovery status of two profiles in the same widget"
+          }
+        },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Verifica el estado de recuperación de resistencia de dos perfiles en el mismo widget"
+          }
+        },
+        "fil" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Suriin ang status ng pag-recover ng stamina ng dalawang profile sa parehong widget"
+          }
+        },
+        "fr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Vérifiez l'état de la récupération de la résine de deux profils dans le même widget"
+          }
+        },
+        "it" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Controlla lo stato di recupero della stamina di due profili nello stesso widget"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "同じウィジェットで2つのプロファイルのスタミナ回復状況を確認"
+          }
+        },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "동일한 위젯에서 두 프로필의 스태미나 회복 상태 확인"
+          }
+        },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Проверьте статус восстановления выносливости двух профилей в одном виджете"
+          }
+        },
+        "vi" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Kiểm tra trạng thái hồi phục sức bền của hai hồ sơ trong cùng một tiện ích"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "在同一小部件中确认两个本地账号的玩家体力恢复状况"
+          }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "在同一小工具中確認兩個本機帳號的玩家體力恢復狀況"
+          }
+        }
+      }
+    },
+    "pzWidgetsKit.statusDualProfile.title" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Spielerstatus (Doppelprofil)"
+          }
+        },
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Player Status (Dual Profile)"
+          }
+        },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Estado del Jugador (Perfil Doble)"
+          }
+        },
+        "fil" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Katayuan ng Manlalaro (Dual Profile)"
+          }
+        },
+        "fr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Statut du joueur (Double Profil)"
+          }
+        },
+        "it" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Stato giocatore (Profilo Doppio)"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "プレーヤーの状況（２つのプロファイル）"
+          }
+        },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "플레이어 상태 (듀얼 프로필)"
+          }
+        },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Статус игрока (Двойной профиль)"
+          }
+        },
+        "vi" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Trạng thái người chơi (Hồ sơ kép)"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "玩家状况（双UID）"
+          }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "玩家狀況（雙UID）"
+          }
+        }
+      }
+    },
     "pzWidgetsKit.unit.day:%lld" : {
       "localizations" : {
         "de" : {
